# Auto-investment

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  pyproject.toml  render.yaml  requirements.txt
.claude/commands/: morning_signals.md
.github/workflows/: ai-health.yml  auto-improve.yml  batch-experiment.yml  contest.yml  phase2_pipeline.yml
docs/: strategy_spec.md
results/: README.md  batch_20260411_073508.json  batch_20260413_073832.json  batch_20260420_073933.json  batch_20260427_075029.json  batch_20260504_075923.json  batch_20260511_081305.json  batch_20260518_082443.json  batch_20260525_083423.json  batch_20260601_085412.json  batch_20260608_083725.json  batch_20260615_091116.json  batch_20260622_090521.json  batch_20260629_084059.json  history.jsonl  improve_20260413_083650.json  strategy_spec_v0.2_backtest.json  strategy_spec_v0.3_backtest.json
scripts/: auto_track.py  backtest_phase1.py  backtest_phase2.py  batch_experiment.py  check_claude.py  fetch_real_data.py  post_results_issue.py  run_contest_path_a.py
src/auto_investment/: __init__.py  ai_advisor.py  alpha_arena.py  backtest.py  config.py  context.py  cost_model.py  data.py  data_providers.py  (+17 more)
tests/: test_alpha_arena.py  test_backtest.py  test_context.py  test_cost_model.py  test_cross_exchange.py  test_data_fetchers.py  test_funding_arb.py  test_ic.py  test_improvement_loop.py  test_indicators.py  test_neutralization.py  test_optimizer.py  test_perp_sim.py  test_preipo_alerts.py  test_providers.py  test_risk.py  test_strategy.py  test_yield_router.py
web/: app.js  index.html
(+10 files in other folders)
